Check new implementation