@@ -19,10 +19,15 @@
  */
 package org.sonar.server.project.ws;
 
-import java.util.Iterator;
+import static java.util.Comparator.comparing;
+import static java.util.Comparator.nullsFirst;
+import static java.util.Locale.ENGLISH;
+import static java.util.Objects.requireNonNull;
+
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
 import javax.annotation.Nullable;
 import org.slf4j.Logger;
@@ -31,17 +36,11 @@ import org.sonar.api.server.ServerSide;
 import org.sonar.api.web.UserRole;
 import org.sonar.db.DbClient;
 import org.sonar.db.DbSession;
+import org.sonar.db.component.ComponentQualifiers;
 import org.sonar.db.organization.OrganizationDto;
 import org.sonar.db.permission.OrganizationPermission;
 import org.sonar.db.project.ProjectDto;
-import org.sonar.server.es.EsClientProvider;
 import org.sonar.server.user.UserSession;
-
-import static java.util.Comparator.comparing;
-import static java.util.Comparator.nullsFirst;
-import static java.util.Locale.ENGLISH;
-import static java.util.Objects.requireNonNull;
-import static java.util.stream.Collectors.toSet;
 
 @ServerSide
 public class ProjectFinder {
@@ -57,77 +56,86 @@ public class ProjectFinder {
 
   public SearchResult search(DbSession dbSession, @Nullable String searchQuery) {
     long startTime = System.currentTimeMillis();
-    long startProjectTime = startTime;
-    List<ProjectDto> allProjects = dbClient.projectDao().selectProjects(dbSession);
-    LOGGER.info("Found {} projects, took {} ms", allProjects.size(), System.currentTimeMillis() - startProjectTime);
 
-    long startEntityTime = System.currentTimeMillis();
-    Set<String> projectsUserHasAccessTo = userSession.keepAuthorizedEntities(UserRole.SCAN, allProjects)
-      .stream()
-      .map(ProjectDto::getKey)
-      .collect(toSet());
-    LOGGER.info("Keep authorized entities {} total ms, {} step ms", System.currentTimeMillis() - startTime, System.currentTimeMillis() - startEntityTime);
+    Set<ProjectDto> candidateProjects;
+    if (userSession.isRoot()) {
+      long loadAllStart = System.currentTimeMillis();
+      candidateProjects = new HashSet<>(dbClient.projectDao().selectProjects(dbSession));
+      LOGGER.info("Loaded {} projects for root user, took {} ms", candidateProjects.size(),
+          System.currentTimeMillis() - loadAllStart);
+    } else {
+      long directStart = System.currentTimeMillis();
+      List<ProjectDto> projectsWithDirectPermission = searchProjectsWithDirectScanPermission(dbSession);
+      LOGGER.info("Projects with direct scan permission {} projects, {} ms", projectsWithDirectPermission.size(),
+          System.currentTimeMillis() - directStart);
 
-    long startQueryPermTime = System.currentTimeMillis();
-    applyQueryAndPermissionFilter(searchQuery, allProjects, projectsUserHasAccessTo);
-    LOGGER.info("Apply query perm filter {} total ms, {} step ms", System.currentTimeMillis() - startTime, System.currentTimeMillis() - startQueryPermTime);
+      long orgLevelStart = System.currentTimeMillis();
+      List<ProjectDto> projectsWithOrgLevelPermissions = searchProjectsWithOrgLevelPermissions(dbSession);
+      LOGGER.info("Projects with org level scan permission {} projects, {} ms", projectsWithOrgLevelPermissions.size(),
+          System.currentTimeMillis() - orgLevelStart);
 
-    long searchOrgLevelTime = System.currentTimeMillis();
-    List<ProjectDto> projectsWithOrgLevelPermissions = searchProjectsWithOrgLevelPermissions(dbSession);
-    LOGGER.info("Search Proj with org level perm {} total ms, {} step ms", System.currentTimeMillis() - startTime, System.currentTimeMillis() - searchOrgLevelTime);
-
-    if (!projectsWithOrgLevelPermissions.isEmpty()) {
-      LOGGER.info("Project with org level not empty check");
-      long startProjWithOrgLevelFilterTime = System.currentTimeMillis();
-      List<ProjectDto> uniqueProjects = projectsWithOrgLevelPermissions
-              .stream()
-              .filter(p -> !allProjects.contains(p))
-              .toList();
-      LOGGER.info("Filter unique projects {} total ms, {} step ms", System.currentTimeMillis() - startTime, System.currentTimeMillis() - startProjWithOrgLevelFilterTime);
-
-      if (!uniqueProjects.isEmpty()) {
-        allProjects.addAll(uniqueProjects);
-      }
+      candidateProjects = new HashSet<>(projectsWithDirectPermission);
+      candidateProjects.addAll(projectsWithOrgLevelPermissions);
     }
 
+    long filterStart = System.currentTimeMillis();
+    List<ProjectDto> filteredProjects = filterByQuery(searchQuery, new ArrayList<>(candidateProjects));
+    LOGGER.info("Apply query filter {} total ms, {} step ms", System.currentTimeMillis() - startTime,
+        System.currentTimeMillis() - filterStart);
+
+    long authorizationStart = System.currentTimeMillis();
+    List<ProjectDto> authorizedProjects = userSession.keepAuthorizedEntities(UserRole.SCAN, filteredProjects);
+    LOGGER.info("Keep authorized entities {} total ms, {} step ms", System.currentTimeMillis() - startTime,
+        System.currentTimeMillis() - authorizationStart);
+
     long startResultTime = System.currentTimeMillis();
-    List<Project> resultProjects = allProjects.stream()
-            .sorted(comparing(ProjectDto::getName, nullsFirst(String.CASE_INSENSITIVE_ORDER)))
-            .map(p -> new Project(p.getKey(), p.getName())).collect(Collectors.toList());
-    LOGGER.info("Results project {} total ms, {} step ms", System.currentTimeMillis() - startTime, System.currentTimeMillis() - startResultTime);
+    List<Project> resultProjects = authorizedProjects.stream()
+        .sorted(comparing(ProjectDto::getName, nullsFirst(String.CASE_INSENSITIVE_ORDER)))
+        .map(p -> new Project(p.getKey(), p.getName()))
+        .toList();
+    LOGGER.info("Results project {} total ms, {} step ms", System.currentTimeMillis() - startTime,
+        System.currentTimeMillis() - startResultTime);
 
     return new SearchResult(resultProjects);
   }
 
+  private List<ProjectDto> searchProjectsWithDirectScanPermission(DbSession dbSession) {
+    String userUuid = userSession.getUuid();
+    if (userUuid == null) {
+      return List.of();
+    }
+
+    List<String> projectUuids = dbClient.roleDao()
+        .selectEntityUuidsByPermissionAndUserUuidAndQualifier(dbSession, UserRole.SCAN, userUuid,
+            Set.of(ComponentQualifiers.PROJECT));
+    if (projectUuids.isEmpty()) {
+      return List.of();
+    }
+
+    return dbClient.projectDao().selectByUuids(dbSession, Set.copyOf(projectUuids));
+  }
+
   private List<ProjectDto> searchProjectsWithOrgLevelPermissions(DbSession dbSession) {
     List<OrganizationDto> orgs = dbClient.organizationDao().selectOrgsForUserAndRole(dbSession, userSession.getUuid(),
-            OrganizationPermission.SCAN.toString());
+        OrganizationPermission.SCAN.toString());
     if (orgs.isEmpty()) {
       return List.of();
     }
-    List<String> orgUuids = orgs.stream().map(o -> o.getUuid())
-            .collect(Collectors.toList());
+    List<String> orgUuids = orgs.stream().map(OrganizationDto::getUuid).toList();
     return dbClient.projectDao().selectProjectsByOrganizationUuids(dbSession, orgUuids);
   }
 
-  private void applyQueryAndPermissionFilter(@Nullable String searchQuery, final List<ProjectDto> projects,
-          Set<String> projectsUserHasAccessTo) {
-    Iterator<ProjectDto> projectIterator = projects.iterator();
-    while (projectIterator.hasNext()) {
-      ProjectDto project = projectIterator.next();
-      if (isFilteredByQuery(searchQuery, project.getName()) || !hasPermission(projectsUserHasAccessTo,
-              project.getKey())) {
-        projectIterator.remove();
-      }
+  private List<ProjectDto> filterByQuery(@Nullable String searchQuery, List<ProjectDto> projects) {
+    if (searchQuery == null) {
+      return projects;
     }
+    return projects.stream()
+        .filter(project -> !isFilteredByQuery(searchQuery, project.getName()))
+        .toList();
   }
 
   private static boolean isFilteredByQuery(@Nullable String query, String projectName) {
     return query != null && !projectName.toLowerCase(ENGLISH).contains(query.toLowerCase(ENGLISH));
-  }
-
-  private boolean hasPermission(Set<String> projectsUserHasAccessTo, String projectKey) {
-    return userSession.hasPermission(OrganizationPermission.SCAN, "" /* TODO */) || projectsUserHasAccessTo.contains(projectKey);
   }
 
   public static class SearchResult {
